--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "next export"
   },
   "dependencies": {
-    "next": "12.0.7",
+    "next": "12.1.6",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
